Fix text visibility issue in description field

--- a/client/src/Components/local/molecules/json-editor/bioworks.css
+++ b/client/src/Components/local/molecules/json-editor/bioworks.css
@@ -9,6 +9,10 @@
     display: contents;
 }
 
+#root_id__description {
+  color: white;
+}
+
 .edt-disable .form-group {
     display: inline-grid;
 }
